test/integration/bad/new/ill-formed-statement22.stan
transformed data { get_lp while
